--- a/Full-Energy/package.json
+++ b/Full-Energy/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "npm server.js",
-    "server":"nodemon server.js",
-    "client":"npm start --prefix client",
-    "dev":"concurrently \"npm run server\"\"npm run client\""
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\"\"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "validator": "^13.7.0"
   }
 }
