--- a/Full-Energy/package.json
+++ b/Full-Energy/package.json
@@ -31,7 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "nodemon": "^2.0.15",
-    "path": "^0.12.7",
+    "stripe": "^8.200.0",
     "validator": "^13.7.0"
   }
 }
