--- a/Clientandroid/app/src/main/AndroidManifest.xml
+++ b/Clientandroid/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Clientandroid">
+        android:theme="@style/Theme.Cristian">
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
