--- a/Clientandroid/app/src/main/AndroidManifest.xml
+++ b/Clientandroid/app/src/main/AndroidManifest.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fullenergy.client_android">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cristian">
+        android:theme="@style/Theme.Cristian"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".MainShopActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".MainShopActivity"
+            android:exported="false" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
