--- a/client-react/package.json
+++ b/client-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client-react",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.18"
   }
 }
